# prgrm

./: Anchor.toml  README.md
programs/pro-gram/: Cargo.toml
programs/pro-gram/src/: lib.rs
programs/pro-gram/src/instructions/: init_gram.rs  like_gram.rs  mod.rs  update_gram_auth.rs  update_gram_meta.rs
programs/pro-gram/src/state/: gram.rs  like.rs  mod.rs
programs/test-prog/: Cargo.toml
programs/test-prog/src/: lib.rs
tests/: pro-gram.ts
